ACTIN-111: Adapt extraction to handle newline-delimited input